v1.4/_sources/examples/plots/raster_declarative.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/plots/raster_declarative.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_plots_raster_declarative.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_plots_raster_declarative.py:


Raster Plots using Declarative Syntax
=====================================

The MetPy declarative syntax allows for a simplified interface to creating common
meteorological analyses including surface observation plots. This example creates
a temperature raster plot, though other potential raster plots include radar.

.. GENERATED FROM PYTHON SOURCE LINES 12-19

.. code-block:: default


    import xarray as xr

    from metpy.cbook import get_test_data
    from metpy.plots import MapPanel, PanelContainer, RasterPlot
    from metpy.units import units








.. GENERATED FROM PYTHON SOURCE LINES 20-21

Import the temperature data from the NARR file.

.. GENERATED FROM PYTHON SOURCE LINES 21-23

.. code-block:: default

    narr_data = xr.open_dataset(get_test_data('narr_example.nc', as_file_obj=False))








.. GENERATED FROM PYTHON SOURCE LINES 24-25

Preview the data:

.. GENERATED FROM PYTHON SOURCE LINES 25-27

.. code-block:: default

    narr_data






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div><svg style="position: absolute; width: 0; height: 0; overflow: hidden">
    <defs>
    <symbol id="icon-database" viewBox="0 0 32 32">
    <path d="M16 0c-8.837 0-16 2.239-16 5v4c0 2.761 7.163 5 16 5s16-2.239 16-5v-4c0-2.761-7.163-5-16-5z"></path>
    <path d="M16 17c-8.837 0-16-2.239-16-5v6c0 2.761 7.163 5 16 5s16-2.239 16-5v-6c0 2.761-7.163 5-16 5z"></path>
    <path d="M16 26c-8.837 0-16-2.239-16-5v6c0 2.761 7.163 5 16 5s16-2.239 16-5v-6c0 2.761-7.163 5-16 5z"></path>
    </symbol>
    <symbol id="icon-file-text2" viewBox="0 0 32 32">
    <path d="M28.681 7.159c-0.694-0.947-1.662-2.053-2.724-3.116s-2.169-2.030-3.116-2.724c-1.612-1.182-2.393-1.319-2.841-1.319h-15.5c-1.378 0-2.5 1.121-2.5 2.5v27c0 1.378 1.122 2.5 2.5 2.5h23c1.378 0 2.5-1.122 2.5-2.5v-19.5c0-0.448-0.137-1.23-1.319-2.841zM24.543 5.457c0.959 0.959 1.712 1.825 2.268 2.543h-4.811v-4.811c0.718 0.556 1.584 1.309 2.543 2.268zM28 29.5c0 0.271-0.229 0.5-0.5 0.5h-23c-0.271 0-0.5-0.229-0.5-0.5v-27c0-0.271 0.229-0.5 0.5-0.5 0 0 15.499-0 15.5 0v7c0 0.552 0.448 1 1 1h7v19.5z"></path>
    <path d="M23 26h-14c-0.552 0-1-0.448-1-1s0.448-1 1-1h14c0.552 0 1 0.448 1 1s-0.448 1-1 1z"></path>
    <path d="M23 22h-14c-0.552 0-1-0.448-1-1s0.448-1 1-1h14c0.552 0 1 0.448 1 1s-0.448 1-1 1z"></path>
    <path d="M23 18h-14c-0.552 0-1-0.448-1-1s0.448-1 1-1h14c0.552 0 1 0.448 1 1s-0.448 1-1 1z"></path>
    </symbol>
    </defs>
    </svg>
    <style>/* CSS stylesheet for displaying xarray objects in jupyterlab.
     *
     */

    :root {
      --xr-font-color0: var(--jp-content-font-color0, rgba(0, 0, 0, 1));
      --xr-font-color2: var(--jp-content-font-color2, rgba(0, 0, 0, 0.54));
      --xr-font-color3: var(--jp-content-font-color3, rgba(0, 0, 0, 0.38));
      --xr-border-color: var(--jp-border-color2, #e0e0e0);
      --xr-disabled-color: var(--jp-layout-color3, #bdbdbd);
      --xr-background-color: var(--jp-layout-color0, white);
      --xr-background-color-row-even: var(--jp-layout-color1, white);
      --xr-background-color-row-odd: var(--jp-layout-color2, #eeeeee);
    }

    html[theme=dark],
    body[data-theme=dark],
    body.vscode-dark {
      --xr-font-color0: rgba(255, 255, 255, 1);
      --xr-font-color2: rgba(255, 255, 255, 0.54);
      --xr-font-color3: rgba(255, 255, 255, 0.38);
      --xr-border-color: #1F1F1F;
      --xr-disabled-color: #515151;
      --xr-background-color: #111111;
      --xr-background-color-row-even: #111111;
      --xr-background-color-row-odd: #313131;
    }

    .xr-wrap {
      display: block !important;
      min-width: 300px;
      max-width: 700px;
    }

    .xr-text-repr-fallback {
      /* fallback to plain text repr when CSS is not injected (untrusted notebook) */
      display: none;
    }

    .xr-header {
      padding-top: 6px;
      padding-bottom: 6px;
      margin-bottom: 4px;
      border-bottom: solid 1px var(--xr-border-color);
    }

    .xr-header > div,
    .xr-header > ul {
      display: inline;
      margin-top: 0;
      margin-bottom: 0;
    }

    .xr-obj-type,
    .xr-array-name {
      margin-left: 2px;
      margin-right: 10px;
    }

    .xr-obj-type {
      color: var(--xr-font-color2);
    }

    .xr-sections {
      padding-left: 0 !important;
      display: grid;
      grid-template-columns: 150px auto auto 1fr 20px 20px;
    }

    .xr-section-item {
      display: contents;
    }

    .xr-section-item input {
      display: none;
    }

    .xr-section-item input + label {
      color: var(--xr-disabled-color);
    }

    .xr-section-item input:enabled + label {
      cursor: pointer;
      color: var(--xr-font-color2);
    }

    .xr-section-item input:enabled + label:hover {
      color: var(--xr-font-color0);
    }

    .xr-section-summary {
      grid-column: 1;
      color: var(--xr-font-color2);
      font-weight: 500;
    }

    .xr-section-summary > span {
      display: inline-block;
      padding-left: 0.5em;
    }

    .xr-section-summary-in:disabled + label {
      color: var(--xr-font-color2);
    }

    .xr-section-summary-in + label:before {
      display: inline-block;
      content: '►';
      font-size: 11px;
      width: 15px;
      text-align: center;
    }

    .xr-section-summary-in:disabled + label:before {
      color: var(--xr-disabled-color);
    }

    .xr-section-summary-in:checked + label:before {
      content: '▼';
    }

    .xr-section-summary-in:checked + label > span {
      display: none;
    }

    .xr-section-summary,
    .xr-section-inline-details {
      padding-top: 4px;
      padding-bottom: 4px;
    }

    .xr-section-inline-details {
      grid-column: 2 / -1;
    }

    .xr-section-details {
      display: none;
      grid-column: 1 / -1;
      margin-bottom: 5px;
    }

    .xr-section-summary-in:checked ~ .xr-section-details {
      display: contents;
    }

    .xr-array-wrap {
      grid-column: 1 / -1;
      display: grid;
      grid-template-columns: 20px auto;
    }

    .xr-array-wrap > label {
      grid-column: 1;
      vertical-align: top;
    }

    .xr-preview {
      color: var(--xr-font-color3);
    }

    .xr-array-preview,
    .xr-array-data {
      padding: 0 5px !important;
      grid-column: 2;
    }

    .xr-array-data,
    .xr-array-in:checked ~ .xr-array-preview {
      display: none;
    }

    .xr-array-in:checked ~ .xr-array-data,
    .xr-array-preview {
      display: inline-block;
    }

    .xr-dim-list {
      display: inline-block !important;
      list-style: none;
      padding: 0 !important;
      margin: 0;
    }

    .xr-dim-list li {
      display: inline-block;
      padding: 0;
      margin: 0;
    }

    .xr-dim-list:before {
      content: '(';
    }

    .xr-dim-list:after {
      content: ')';
    }

    .xr-dim-list li:not(:last-child):after {
      content: ',';
      padding-right: 5px;
    }

    .xr-has-index {
      font-weight: bold;
    }

    .xr-var-list,
    .xr-var-item {
      display: contents;
    }

    .xr-var-item > div,
    .xr-var-item label,
    .xr-var-item > .xr-var-name span {
      background-color: var(--xr-background-color-row-even);
      margin-bottom: 0;
    }

    .xr-var-item > .xr-var-name:hover span {
      padding-right: 5px;
    }

    .xr-var-list > li:nth-child(odd) > div,
    .xr-var-list > li:nth-child(odd) > label,
    .xr-var-list > li:nth-child(odd) > .xr-var-name span {
      background-color: var(--xr-background-color-row-odd);
    }

    .xr-var-name {
      grid-column: 1;
    }

    .xr-var-dims {
      grid-column: 2;
    }

    .xr-var-dtype {
      grid-column: 3;
      text-align: right;
      color: var(--xr-font-color2);
    }

    .xr-var-preview {
      grid-column: 4;
    }

    .xr-index-preview {
      grid-column: 2 / 5;
      color: var(--xr-font-color2);
    }

    .xr-var-name,
    .xr-var-dims,
    .xr-var-dtype,
    .xr-preview,
    .xr-attrs dt {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      padding-right: 10px;
    }

    .xr-var-name:hover,
    .xr-var-dims:hover,
    .xr-var-dtype:hover,
    .xr-attrs dt:hover {
      overflow: visible;
      width: auto;
      z-index: 1;
    }

    .xr-var-attrs,
    .xr-var-data,
    .xr-index-data {
      display: none;
      background-color: var(--xr-background-color) !important;
      padding-bottom: 5px !important;
    }

    .xr-var-attrs-in:checked ~ .xr-var-attrs,
    .xr-var-data-in:checked ~ .xr-var-data,
    .xr-index-data-in:checked ~ .xr-index-data {
      display: block;
    }

    .xr-var-data > table {
      float: right;
    }

    .xr-var-name span,
    .xr-var-data,
    .xr-index-name div,
    .xr-index-data,
    .xr-attrs {
      padding-left: 25px !important;
    }

    .xr-attrs,
    .xr-var-attrs,
    .xr-var-data,
    .xr-index-data {
      grid-column: 1 / -1;
    }

    dl.xr-attrs {
      padding: 0;
      margin: 0;
      display: grid;
      grid-template-columns: 125px auto;
    }

    .xr-attrs dt,
    .xr-attrs dd {
      padding: 0;
      margin: 0;
      float: left;
      padding-right: 10px;
      width: auto;
    }

    .xr-attrs dt {
      font-weight: normal;
      grid-column: 1;
    }

    .xr-attrs dt:hover span {
      display: inline-block;
      background: var(--xr-background-color);
      padding-right: 10px;
    }

    .xr-attrs dd {
      grid-column: 2;
      white-space: pre-wrap;
      word-break: break-all;
    }

    .xr-icon-database,
    .xr-icon-file-text2,
    .xr-no-icon {
      display: inline-block;
      vertical-align: middle;
      width: 1em;
      height: 1.5em !important;
      stroke-width: 0;
      stroke: currentColor;
      fill: currentColor;
    }
    </style><pre class='xr-text-repr-fallback'>&lt;xarray.Dataset&gt;
    Dimensions:              (time: 1, isobaric: 29, y: 118, x: 292)
    Coordinates:
      * time                 (time) datetime64[ns] 1987-04-04T18:00:00
      * isobaric             (isobaric) float64 1e+03 975.0 950.0 ... 125.0 100.0
      * y                    (y) float64 -3.087e+03 -3.054e+03 ... 678.9 711.4
      * x                    (x) float64 -3.977e+03 -3.945e+03 ... 5.47e+03
    Data variables:
        Temperature          (time, isobaric, y, x) float32 ...
        Lambert_Conformal    |S1 ...
        lat                  (y, x) float64 ...
        lon                  (y, x) float64 ...
        u_wind               (time, isobaric, y, x) float32 ...
        v_wind               (time, isobaric, y, x) float32 ...
        Geopotential_height  (time, isobaric, y, x) float32 ...
        Specific_humidity    (time, isobaric, y, x) float32 ...
    Attributes: (12/14)
        Conventions:              CF-1.0
        Originating_center:       US National Weather Service - NCEP(WMC) (7)
        Originating_subcenter:    The North American Regional Reanalysis (NARR) P...
        Generating_Model:         North American Regional Reanalysis (NARR)
        Product_Type:             Forecast/Uninitialized Analysis/Image Product
        title:                    US National Weather Service - NCEP(WMC) North A...
        ...                       ...
        history:                  Direct read of GRIB-1 into NetCDF-Java 4 API
        CF:feature_type:          GRID
        file_format:              GRIB-1
        location:                 /nomads3_data/raid2/noaaport/merged/narr/198704...
        _CoordinateModelRunDate:  1987-04-04T18:00:00Z
        History:                  Translated to CF-1.0 Conventions by Netcdf-Java...</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.Dataset</div></div><ul class='xr-sections'><li class='xr-section-item'><input id='section-acf1268b-1780-4580-babd-257a4e1637df' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-acf1268b-1780-4580-babd-257a4e1637df' class='xr-section-summary'  title='Expand/collapse section'>Dimensions:</label><div class='xr-section-inline-details'><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 1</li><li><span class='xr-has-index'>isobaric</span>: 29</li><li><span class='xr-has-index'>y</span>: 118</li><li><span class='xr-has-index'>x</span>: 292</li></ul></div><div class='xr-section-details'></div></li><li class='xr-section-item'><input id='section-7421653c-de69-4c81-9751-568996a844fa' class='xr-section-summary-in' type='checkbox'  checked><label for='section-7421653c-de69-4c81-9751-568996a844fa' class='xr-section-summary' >Coordinates: <span>(4)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>datetime64[ns]</div><div class='xr-var-preview xr-preview'>1987-04-04T18:00:00</div><input id='attrs-e669f788-8005-4b88-a60c-93adb093875c' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-e669f788-8005-4b88-a60c-93adb093875c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c427c6ed-25a9-47d9-a41a-17fcd4107ae8' class='xr-var-data-in' type='checkbox'><label for='data-c427c6ed-25a9-47d9-a41a-17fcd4107ae8' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>forecast time</dd><dt><span>_CoordinateAxisType :</span></dt><dd>Time</dd></dl></div><div class='xr-var-data'><pre>array([&#x27;1987-04-04T18:00:00.000000000&#x27;], dtype=&#x27;datetime64[ns]&#x27;)</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>isobaric</span></div><div class='xr-var-dims'>(isobaric)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>1e+03 975.0 950.0 ... 125.0 100.0</div><input id='attrs-6b92d619-9d11-45c1-9c0b-30c6f6399f97' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-6b92d619-9d11-45c1-9c0b-30c6f6399f97' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-71868034-4b6d-41c3-ad63-dcff1ea14757' class='xr-var-data-in' type='checkbox'><label for='data-71868034-4b6d-41c3-ad63-dcff1ea14757' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>long_name :</span></dt><dd>Isobaric surface</dd><dt><span>units :</span></dt><dd>hPa</dd><dt><span>positive :</span></dt><dd>down</dd><dt><span>GRIB_level_type :</span></dt><dd>100</dd><dt><span>_CoordinateAxisType :</span></dt><dd>Pressure</dd><dt><span>_CoordinateZisPositive :</span></dt><dd>down</dd></dl></div><div class='xr-var-data'><pre>array([1000.,  975.,  950.,  925.,  900.,  875.,  850.,  825.,  800.,  775.,
            750.,  725.,  700.,  650.,  600.,  550.,  500.,  450.,  400.,  350.,
            300.,  275.,  250.,  225.,  200.,  175.,  150.,  125.,  100.])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>y</span></div><div class='xr-var-dims'>(y)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-3.087e+03 -3.054e+03 ... 711.4</div><input id='attrs-c6b37f21-6d32-4827-ae19-bc2d2d9d449b' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-c6b37f21-6d32-4827-ae19-bc2d2d9d449b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5025f7b3-76e0-4f11-939e-a7fbae677833' class='xr-var-data-in' type='checkbox'><label for='data-5025f7b3-76e0-4f11-939e-a7fbae677833' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>km</dd><dt><span>long_name :</span></dt><dd>y coordinate of projection</dd><dt><span>standard_name :</span></dt><dd>projection_y_coordinate</dd><dt><span>grid_spacing :</span></dt><dd>32.463 km</dd><dt><span>_CoordinateAxisType :</span></dt><dd>GeoY</dd></dl></div><div class='xr-var-data'><pre>array([-3.086806e+03, -3.054343e+03, -3.021880e+03, -2.989417e+03,
           -2.956954e+03, -2.924491e+03, -2.892028e+03, -2.859565e+03,
           -2.827102e+03, -2.794639e+03, -2.762176e+03, -2.729713e+03,
           -2.697250e+03, -2.664787e+03, -2.632324e+03, -2.599861e+03,
           -2.567398e+03, -2.534935e+03, -2.502472e+03, -2.470009e+03,
           -2.437546e+03, -2.405083e+03, -2.372620e+03, -2.340157e+03,
           -2.307694e+03, -2.275231e+03, -2.242768e+03, -2.210305e+03,
           -2.177842e+03, -2.145379e+03, -2.112916e+03, -2.080453e+03,
           -2.047990e+03, -2.015527e+03, -1.983064e+03, -1.950601e+03,
           -1.918138e+03, -1.885675e+03, -1.853212e+03, -1.820749e+03,
           -1.788286e+03, -1.755823e+03, -1.723360e+03, -1.690897e+03,
           -1.658434e+03, -1.625971e+03, -1.593508e+03, -1.561045e+03,
           -1.528582e+03, -1.496119e+03, -1.463656e+03, -1.431193e+03,
           -1.398730e+03, -1.366267e+03, -1.333804e+03, -1.301341e+03,
           -1.268878e+03, -1.236415e+03, -1.203952e+03, -1.171489e+03,
           -1.139026e+03, -1.106563e+03, -1.074100e+03, -1.041637e+03,
           -1.009174e+03, -9.767106e+02, -9.442476e+02, -9.117846e+02,
           -8.793216e+02, -8.468586e+02, -8.143956e+02, -7.819326e+02,
           -7.494696e+02, -7.170066e+02, -6.845436e+02, -6.520806e+02,
           -6.196176e+02, -5.871546e+02, -5.546916e+02, -5.222286e+02,
           -4.897656e+02, -4.573026e+02, -4.248396e+02, -3.923766e+02,
           -3.599136e+02, -3.274506e+02, -2.949876e+02, -2.625246e+02,
           -2.300616e+02, -1.975986e+02, -1.651356e+02, -1.326726e+02,
           -1.002096e+02, -6.774665e+01, -3.528365e+01, -2.820646e+00,
            2.964235e+01,  6.210535e+01,  9.456835e+01,  1.270314e+02,
            1.594944e+02,  1.919574e+02,  2.244204e+02,  2.568834e+02,
            2.893464e+02,  3.218094e+02,  3.542724e+02,  3.867354e+02,
            4.191984e+02,  4.516614e+02,  4.841244e+02,  5.165874e+02,
            5.490504e+02,  5.815134e+02,  6.139764e+02,  6.464394e+02,
            6.789024e+02,  7.113654e+02])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>x</span></div><div class='xr-var-dims'>(x)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-3.977e+03 -3.945e+03 ... 5.47e+03</div><input id='attrs-f52ab877-0445-4787-acdc-a50b3ccfdd2a' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-f52ab877-0445-4787-acdc-a50b3ccfdd2a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e66fb6c0-602a-4dce-93e4-88f96c326aa7' class='xr-var-data-in' type='checkbox'><label for='data-e66fb6c0-602a-4dce-93e4-88f96c326aa7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>km</dd><dt><span>long_name :</span></dt><dd>x coordinate of projection</dd><dt><span>standard_name :</span></dt><dd>projection_x_coordinate</dd><dt><span>grid_spacing :</span></dt><dd>32.463 km</dd><dt><span>_CoordinateAxisType :</span></dt><dd>GeoX</dd></dl></div><div class='xr-var-data'><pre>array([-3977.054864, -3944.591864, -3912.128864, ...,  5404.752136,
            5437.215136,  5469.678136])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-0f6d369c-e0d0-4dfc-be93-fcb595f255ba' class='xr-section-summary-in' type='checkbox'  checked><label for='section-0f6d369c-e0d0-4dfc-be93-fcb595f255ba' class='xr-section-summary' >Data variables: <span>(8)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>Temperature</span></div><div class='xr-var-dims'>(time, isobaric, y, x)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-36ad53a6-132b-4ef1-8e55-144706eaa19a' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-36ad53a6-132b-4ef1-8e55-144706eaa19a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-089a715b-c909-4dbb-aa24-4dae3da357b4' class='xr-var-data-in' type='checkbox'><label for='data-089a715b-c909-4dbb-aa24-4dae3da357b4' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>K</dd><dt><span>long_name :</span></dt><dd>Temperature @ isobaric</dd><dt><span>grid_mapping :</span></dt><dd>Lambert_Conformal</dd><dt><span>GRIB_param_name :</span></dt><dd>Temperature</dd><dt><span>GRIB_param_short_name :</span></dt><dd>TMP</dd><dt><span>GRIB_center_id :</span></dt><dd>7</dd><dt><span>GRIB_table_id :</span></dt><dd>131</dd><dt><span>GRIB_param_number :</span></dt><dd>11</dd><dt><span>GRIB_param_id :</span></dt><dd>[  1   7 131  11]</dd><dt><span>GRIB_product_definition_type :</span></dt><dd>Initialized analysis product</dd><dt><span>GRIB_level_type :</span></dt><dd>100</dd><dt><span>GRIB_VectorComponentFlag :</span></dt><dd>gridRelative</dd></dl></div><div class='xr-var-data'><pre>[999224 values with dtype=float32]</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>Lambert_Conformal</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>|S1</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-61666c7f-c034-417b-8996-23d78e55c47f' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-61666c7f-c034-417b-8996-23d78e55c47f' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-ee08d9e7-756a-496d-b849-c56deec1e6a4' class='xr-var-data-in' type='checkbox'><label for='data-ee08d9e7-756a-496d-b849-c56deec1e6a4' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>grid_mapping_name :</span></dt><dd>lambert_conformal_conic</dd><dt><span>standard_parallel :</span></dt><dd>50.0</dd><dt><span>longitude_of_central_meridian :</span></dt><dd>-107.0</dd><dt><span>latitude_of_projection_origin :</span></dt><dd>50.0</dd><dt><span>earth_shape :</span></dt><dd>spherical</dd><dt><span>earth_radius :</span></dt><dd>6367470.21484375</dd><dt><span>GRIB_param_Dx :</span></dt><dd>32463.0</dd><dt><span>GRIB_param_Dy :</span></dt><dd>32463.0</dd><dt><span>GRIB_param_GDSkey :</span></dt><dd>55295</dd><dt><span>GRIB_param_La1 :</span></dt><dd>1.0</dd><dt><span>GRIB_param_Latin1 :</span></dt><dd>50.0</dd><dt><span>GRIB_param_Latin2 :</span></dt><dd>50.0</dd><dt><span>GRIB_param_Lo1 :</span></dt><dd>-145.5</dd><dt><span>GRIB_param_LoV :</span></dt><dd>-107.0</dd><dt><span>GRIB_param_NpProj :</span></dt><dd>true</dd><dt><span>GRIB_param_Nx :</span></dt><dd>349</dd><dt><span>GRIB_param_Ny :</span></dt><dd>277</dd><dt><span>GRIB_param_ProjFlag :</span></dt><dd>0</dd><dt><span>GRIB_param_ResCompFlag :</span></dt><dd>8</dd><dt><span>GRIB_param_SpLat :</span></dt><dd>0.0</dd><dt><span>GRIB_param_SpLon :</span></dt><dd>0.0</dd><dt><span>GRIB_param_VectorComponentFlag :</span></dt><dd>gridRelative</dd><dt><span>GRIB_param_Winds :</span></dt><dd>Relative</dd><dt><span>GRIB_param_grid_name :</span></dt><dd>Lambert_Conformal</dd><dt><span>GRIB_param_grid_radius_spherical_earth :</span></dt><dd>6367.47</dd><dt><span>GRIB_param_grid_shape :</span></dt><dd>spherical</dd><dt><span>GRIB_param_grid_shape_code :</span></dt><dd>0</dd><dt><span>GRIB_param_grid_type :</span></dt><dd>3</dd><dt><span>GRIB_param_grid_units :</span></dt><dd>m</dd><dt><span>GRIB_param_scanning_mode :</span></dt><dd>64</dd><dt><span>_CoordinateTransformType :</span></dt><dd>Projection</dd><dt><span>_CoordinateAxisTypes :</span></dt><dd>GeoX GeoY</dd></dl></div><div class='xr-var-data'><pre>[1 values with dtype=|S1]</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>lat</span></div><div class='xr-var-dims'>(y, x)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-0bbbca8b-2ba5-4fe2-b760-b4e43c07b3e4' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-0bbbca8b-2ba5-4fe2-b760-b4e43c07b3e4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2c11ea5f-8890-4268-a3df-41514d531155' class='xr-var-data-in' type='checkbox'><label for='data-2c11ea5f-8890-4268-a3df-41514d531155' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>degrees_north</dd><dt><span>long_name :</span></dt><dd>latitude coordinate</dd><dt><span>standard_name :</span></dt><dd>latitude</dd><dt><span>_CoordinateAxisType :</span></dt><dd>Lat</dd></dl></div><div class='xr-var-data'><pre>[34456 values with dtype=float64]</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>lon</span></div><div class='xr-var-dims'>(y, x)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-7e55adda-5a72-40c6-8d26-61ed22870660' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-7e55adda-5a72-40c6-8d26-61ed22870660' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-789ab2b6-dae5-4e22-92ea-dfb4feefcb8c' class='xr-var-data-in' type='checkbox'><label for='data-789ab2b6-dae5-4e22-92ea-dfb4feefcb8c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>degrees_east</dd><dt><span>long_name :</span></dt><dd>longitude coordinate</dd><dt><span>standard_name :</span></dt><dd>longitude</dd><dt><span>_CoordinateAxisType :</span></dt><dd>Lon</dd></dl></div><div class='xr-var-data'><pre>[34456 values with dtype=float64]</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>u_wind</span></div><div class='xr-var-dims'>(time, isobaric, y, x)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-fba6e722-9efe-4a41-a6c3-9e1513cc731f' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-fba6e722-9efe-4a41-a6c3-9e1513cc731f' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-4ce9bb7e-41cc-465b-bcb8-742f78ca3e9a' class='xr-var-data-in' type='checkbox'><label for='data-4ce9bb7e-41cc-465b-bcb8-742f78ca3e9a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m/s</dd><dt><span>long_name :</span></dt><dd>u_wind @ isobaric</dd><dt><span>grid_mapping :</span></dt><dd>Lambert_Conformal</dd><dt><span>GRIB_param_name :</span></dt><dd>u_wind</dd><dt><span>GRIB_param_short_name :</span></dt><dd>UGRD</dd><dt><span>GRIB_center_id :</span></dt><dd>7</dd><dt><span>GRIB_table_id :</span></dt><dd>131</dd><dt><span>GRIB_param_number :</span></dt><dd>33</dd><dt><span>GRIB_param_id :</span></dt><dd>[  1   7 131  33]</dd><dt><span>GRIB_product_definition_type :</span></dt><dd>Initialized analysis product</dd><dt><span>GRIB_level_type :</span></dt><dd>100</dd><dt><span>GRIB_VectorComponentFlag :</span></dt><dd>gridRelative</dd></dl></div><div class='xr-var-data'><pre>[999224 values with dtype=float32]</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>v_wind</span></div><div class='xr-var-dims'>(time, isobaric, y, x)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-e4f54a62-711e-491a-a0f0-c8658c872604' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-e4f54a62-711e-491a-a0f0-c8658c872604' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-219dd361-6cd9-4f75-8865-3fc9adf3f6f7' class='xr-var-data-in' type='checkbox'><label for='data-219dd361-6cd9-4f75-8865-3fc9adf3f6f7' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m/s</dd><dt><span>long_name :</span></dt><dd>v_wind @ isobaric</dd><dt><span>grid_mapping :</span></dt><dd>Lambert_Conformal</dd><dt><span>GRIB_param_name :</span></dt><dd>v_wind</dd><dt><span>GRIB_param_short_name :</span></dt><dd>VGRD</dd><dt><span>GRIB_center_id :</span></dt><dd>7</dd><dt><span>GRIB_table_id :</span></dt><dd>131</dd><dt><span>GRIB_param_number :</span></dt><dd>34</dd><dt><span>GRIB_param_id :</span></dt><dd>[  1   7 131  34]</dd><dt><span>GRIB_product_definition_type :</span></dt><dd>Initialized analysis product</dd><dt><span>GRIB_level_type :</span></dt><dd>100</dd><dt><span>GRIB_VectorComponentFlag :</span></dt><dd>gridRelative</dd></dl></div><div class='xr-var-data'><pre>[999224 values with dtype=float32]</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>Geopotential_height</span></div><div class='xr-var-dims'>(time, isobaric, y, x)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-874c5959-05b6-4929-8afc-318f73ca1021' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-874c5959-05b6-4929-8afc-318f73ca1021' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-8c7cd1cb-8053-4749-871b-d81cf7571428' class='xr-var-data-in' type='checkbox'><label for='data-8c7cd1cb-8053-4749-871b-d81cf7571428' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>gpm</dd><dt><span>long_name :</span></dt><dd>Geopotential_height @ isobaric</dd><dt><span>grid_mapping :</span></dt><dd>Lambert_Conformal</dd><dt><span>GRIB_param_name :</span></dt><dd>Geopotential_height</dd><dt><span>GRIB_param_short_name :</span></dt><dd>HGT</dd><dt><span>GRIB_center_id :</span></dt><dd>7</dd><dt><span>GRIB_table_id :</span></dt><dd>131</dd><dt><span>GRIB_param_number :</span></dt><dd>7</dd><dt><span>GRIB_param_id :</span></dt><dd>[  1   7 131   7]</dd><dt><span>GRIB_product_definition_type :</span></dt><dd>Initialized analysis product</dd><dt><span>GRIB_level_type :</span></dt><dd>100</dd><dt><span>GRIB_VectorComponentFlag :</span></dt><dd>gridRelative</dd></dl></div><div class='xr-var-data'><pre>[999224 values with dtype=float32]</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>Specific_humidity</span></div><div class='xr-var-dims'>(time, isobaric, y, x)</div><div class='xr-var-dtype'>float32</div><div class='xr-var-preview xr-preview'>...</div><input id='attrs-1e4d0f92-499b-498f-9fbf-ce032ed0cacc' class='xr-var-attrs-in' type='checkbox' ><label for='attrs-1e4d0f92-499b-498f-9fbf-ce032ed0cacc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e747b89a-ba5b-4353-8148-e7ce29ee736a' class='xr-var-data-in' type='checkbox'><label for='data-e747b89a-ba5b-4353-8148-e7ce29ee736a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>kg/kg</dd><dt><span>long_name :</span></dt><dd>Specific_humidity @ isobaric</dd><dt><span>grid_mapping :</span></dt><dd>Lambert_Conformal</dd><dt><span>GRIB_param_name :</span></dt><dd>Specific_humidity</dd><dt><span>GRIB_param_short_name :</span></dt><dd>SPFH</dd><dt><span>GRIB_center_id :</span></dt><dd>7</dd><dt><span>GRIB_table_id :</span></dt><dd>131</dd><dt><span>GRIB_param_number :</span></dt><dd>51</dd><dt><span>GRIB_param_id :</span></dt><dd>[  1   7 131  51]</dd><dt><span>GRIB_product_definition_type :</span></dt><dd>Initialized analysis product</dd><dt><span>GRIB_level_type :</span></dt><dd>100</dd><dt><span>GRIB_VectorComponentFlag :</span></dt><dd>gridRelative</dd></dl></div><div class='xr-var-data'><pre>[999224 values with dtype=float32]</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-5e0503b6-e3d8-4272-a1bd-13be9fa297e4' class='xr-section-summary-in' type='checkbox'  ><label for='section-5e0503b6-e3d8-4272-a1bd-13be9fa297e4' class='xr-section-summary' >Indexes: <span>(4)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>time</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-d04cfd01-8f4f-49f2-b5bf-7a9303cd7d4e' class='xr-index-data-in' type='checkbox'/><label for='index-d04cfd01-8f4f-49f2-b5bf-7a9303cd7d4e' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(DatetimeIndex([&#x27;1987-04-04 18:00:00&#x27;], dtype=&#x27;datetime64[ns]&#x27;, name=&#x27;time&#x27;, freq=None))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>isobaric</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-769b1f40-cac9-4ed2-b7a0-c72f02c647d4' class='xr-index-data-in' type='checkbox'/><label for='index-769b1f40-cac9-4ed2-b7a0-c72f02c647d4' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Float64Index([1000.0,  975.0,  950.0,  925.0,  900.0,  875.0,  850.0,  825.0,
                   800.0,  775.0,  750.0,  725.0,  700.0,  650.0,  600.0,  550.0,
                   500.0,  450.0,  400.0,  350.0,  300.0,  275.0,  250.0,  225.0,
                   200.0,  175.0,  150.0,  125.0,  100.0],
                 dtype=&#x27;float64&#x27;, name=&#x27;isobaric&#x27;))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>y</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-f95ad20c-e889-4cee-9094-6ca079b5b338' class='xr-index-data-in' type='checkbox'/><label for='index-f95ad20c-e889-4cee-9094-6ca079b5b338' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Float64Index([-3086.8056464496035, -3054.3426464496033, -3021.8796464496036,
                  -2989.4166464496034,  -2956.953646449603, -2924.4906464496034,
                  -2892.0276464496037, -2859.5646464496035, -2827.1016464496033,
                  -2794.6386464496036,
                  ...
                   419.19835355039686,   451.6613535503966,  484.12435355039634,
                     516.587353550397,   549.0503535503967,   581.5133535503965,
                    613.9763535503971,   646.4393535503968,   678.9023535503966,
                    711.3653535503963],
                 dtype=&#x27;float64&#x27;, name=&#x27;y&#x27;, length=118))</pre></div></li><li class='xr-var-item'><div class='xr-index-name'><div>x</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-04f123ee-edb3-47f1-8a89-f5b9f1d56f1d' class='xr-index-data-in' type='checkbox'/><label for='index-04f123ee-edb3-47f1-8a89-f5b9f1d56f1d' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Float64Index([ -3977.054863757302, -3944.5918637573022, -3912.1288637573025,
                  -3879.6658637573023,  -3847.202863757302, -3814.7398637573024,
                   -3782.276863757302,  -3749.813863757302, -3717.3508637573022,
                  -3684.8878637573025,
                  ...
                    5177.511136242698,   5209.974136242698,   5242.437136242697,
                    5274.900136242699,   5307.363136242699,   5339.826136242698,
                    5372.289136242698,   5404.752136242698,   5437.215136242698,
                    5469.678136242697],
                 dtype=&#x27;float64&#x27;, name=&#x27;x&#x27;, length=292))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-72c31b53-a5ec-4b55-8d53-26e9837d782a' class='xr-section-summary-in' type='checkbox'  ><label for='section-72c31b53-a5ec-4b55-8d53-26e9837d782a' class='xr-section-summary' >Attributes: <span>(14)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>Conventions :</span></dt><dd>CF-1.0</dd><dt><span>Originating_center :</span></dt><dd>US National Weather Service - NCEP(WMC) (7)</dd><dt><span>Originating_subcenter :</span></dt><dd>The North American Regional Reanalysis (NARR) Project (15)</dd><dt><span>Generating_Model :</span></dt><dd>North American Regional Reanalysis (NARR)</dd><dt><span>Product_Type :</span></dt><dd>Forecast/Uninitialized Analysis/Image Product</dd><dt><span>title :</span></dt><dd>US National Weather Service - NCEP(WMC) North American Regional Reanalysis (NARR) Forecast/Uninitialized Analysis/Image Product</dd><dt><span>institution :</span></dt><dd>Center US National Weather Service - NCEP(WMC) (7) Subcenter The North American Regional Reanalysis (NARR) Project (15)</dd><dt><span>source :</span></dt><dd>Forecast/Uninitialized Analysis/Image Product</dd><dt><span>history :</span></dt><dd>Direct read of GRIB-1 into NetCDF-Java 4 API</dd><dt><span>CF:feature_type :</span></dt><dd>GRID</dd><dt><span>file_format :</span></dt><dd>GRIB-1</dd><dt><span>location :</span></dt><dd>/nomads3_data/raid2/noaaport/merged/narr/198704/19870404/narr-a_221_19870404_1800_000.grb</dd><dt><span>_CoordinateModelRunDate :</span></dt><dd>1987-04-04T18:00:00Z</dd><dt><span>History :</span></dt><dd>Translated to CF-1.0 Conventions by Netcdf-Java CDM (NetcdfCFWriter)
    Original Dataset = narr-a/198704/19870404/narr-a_221_19870404_1800_000.grb; Translation Date = Fri Jun 16 13:26:21 EDT 2017</dd></dl></div></li></ul></div></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 28-30

Create the 'RasterPlot' object and provide it with the NARR data. Specify the level to be
plotted, and use the Data variables column to specify the data field to be plotted.

.. GENERATED FROM PYTHON SOURCE LINES 30-35

.. code-block:: default

    raster = RasterPlot()
    raster.data = narr_data
    raster.field = 'Temperature'
    raster.level = 700 * units.hPa








.. GENERATED FROM PYTHON SOURCE LINES 36-37

Add the plot to a Map Panel and Panel Container.

.. GENERATED FROM PYTHON SOURCE LINES 37-49

.. code-block:: default

    panel = MapPanel()
    panel.area = 'us'
    panel.projection = 'lcc'
    panel.layers = ['coastline']
    panel.plots = [raster]

    pc = PanelContainer()
    pc.size = (8, 8)
    pc.panels = [panel]
    pc.draw()

    pc.show()



.. image-sg:: /examples/plots/images/sphx_glr_raster_declarative_001.png
   :alt: Temperature@700 hectopascal
   :srcset: /examples/plots/images/sphx_glr_raster_declarative_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.094 seconds)


.. _sphx_glr_download_examples_plots_raster_declarative.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: raster_declarative.py <raster_declarative.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: raster_declarative.ipynb <raster_declarative.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
